--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,23 @@
+# blocklist
+branches:
+  except:
+  - /travis.*$/
+
 language: cpp
+sudo: required
+
 compiler:
   - clang
   - gcc
+
+install:
+  - wget --quiet -O - https://raw.githubusercontent.com/r-lyeh/depot/master/travis.pre.sh   | bash -x
+
+before_script:
+  - mkdir build
+  - cd build
+  - cmake ..
+
+script:
+  - pwd
+  - make
